--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.6.4"
+    "@astrojs/tailwind": "^3.1.3",
+    "@fontsource-variable/league-spartan": "^5.0.3",
+    "astro": "^2.6.4",
+    "tailwindcss": "^3.0.24"
   }
 }
